--- a/templates/payroll.html
+++ b/templates/payroll.html
@@ -6,7 +6,7 @@
 <main class="pr-container">
   <div class="pr">
     <h1>Payroll</h1>
-    <input>
+    <input type="text" id="payroll" onkeyup="payrollFunction()"  placeholder="Search for Employee Name..">
   </div>
   <div class="pr-wrapper">
     <div class="pr-box1">
@@ -18,105 +18,34 @@
           <th>Position</th>
           <th>Rate/Hr</th>
         </tr>
-        <tr class="table-content">
+        <tr class="payroll-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>Active</td>
           <td>Software Developer</td>
           <td>₱ 500.00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="payroll-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>Active</td>
           <td>Software Developer</td>
           <td>₱ 500.00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="payroll-content">
+          <td>000002</td>
+          <td>Liza Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="payroll-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>Active</td>
           <td>Software Developer</td>
           <td>₱ 500.00</td>
         </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Active</td>
-          <td>Software Developer</td>
-          <td>₱ 500.00</td>
-        </tr>
-       
       </table>
     </div>
   </div>
