--- a/templates/time-sheet.html
+++ b/templates/time-sheet.html
@@ -6,122 +6,122 @@
 <main class="ts-container">
   <div class="ts">
     <h1>Time Sheet</h1>
-    <input>
+    <input type="text" id="employee-timesheet" onkeyup="timesheetfunction()" placeholder="Search for names..">
   </div>
   <div class="ts-wrapper">
     <div class="ts-box1">
-      <table class="ts-table">
+      <table class="ts-table" id="timesheet">
         <tr class="table-head">
           <th>ID</th>
           <th>Employee Name</th>
           <th>Time In</th>
           <th>Time Out</th>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
+          <td>000001</td>
+          <td>Liza   Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
           <td>John Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
-        <tr class="table-content">
+        <tr class="time-content">
           <td>000001</td>
-          <td>John Doe</td>
-          <td>9:00</td>
-          <td>18:00</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
+          <td>Liza Doe</td>
           <td>9:00</td>
           <td>18:00</td>
         </tr>
