--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -5,9 +5,11 @@
 
 <main class="emplist-container">
   <div class="emplist">
-    <h1>Employee List</h1>
-    <button id="add-employee">Add Employee</button>
+    <h1>Employee List</h1>  
+    <button id="add-emp">Add Employee</button>
+
     <input type="text" id="employeeList" onkeyup="employeeFunction()" placeholder="Search for Employee Name..">
+  
   </div>
   <div class="emplist-wrapper">
     <div class="emplist-box1">
@@ -92,87 +94,65 @@
           <td>Manager</td>
           <td>1234567899</td>
         </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="employee-content">
-          <td><input class="select" type="checkbox" value="Edit"></td>
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
       </table>
+    </div>
+  </div>
+  <div id="empModal" class="modal">
+    <!-- Modal content -->
+    <div class="empModal-content">
+      <h1 id="beif">Basic Employment Information Form</h1>
+      <h2 id="pi">Personal Information</h2>
+      <form action="#" method="post">
+        <div class="empModal-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="empModal-form">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="empModal-form">
+            <label for="phone">Phone:</label>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="0000-000-0000" required>
+        </div>
+        <div class="empModal-form"> 
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" required>
+        </div>
+        <div class="empModal-form">
+          <label for="birthDate">Birthday:</label>
+          <input type="date" id="birthDate" name="birthDate" required>
+        </div>
+        <h2 id="ji">Job Information</h2>
+        <div class="empModal-form">
+            <label for="department">Department:</label>
+            <select id="department" name="department" required>
+                <option value="">Select Department</option>
+                <option value="IT">IT</option>
+                <option value="HR">HR</option>
+                <option value="Finance">Finance</option>
+                <option value="Operations">Operations</option>
+            </select>
+        </div>
+        <div class="empModal-form">
+            <label for="position">Position:</label>
+            <input type="text" id="position" name="position" required>
+        </div>
+        <div class="empModal-form">
+            <label for="salary">Salary:</label>
+            <input type="number" id="salary" name="ssalary" required>
+        </div>
+        <div class="empModal-form">
+            <label for="startDate">Start Date:</label>
+            <input type="date" id="startDate" name="startDate" required>
+        </div>
+        <div class="empModal-form">
+            <label for="notes">Notes:</label>
+            <textarea id="notes" name="notes"></textarea>
+        </div>
+        <button type="submit" class="btn">Submit</button>
+    </form>
+      <span class="close">&times;</span>
     </div>
   </div>
 </main>
