--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/static/css/style.css">
+  
 </head>
 
 <body>
@@ -19,15 +20,16 @@
         <img src="/static/assets/img/integritynet-logo.png">
       </div>
       <div class="login-form">
-        <form method="POST" action="/login/" class="login-box">
-          <input type="text" name="username" placeholder="Enter Username">
-          <input type="password" name="password" placeholder="Password">
-          <input class="btn" type="submit" value="Login">
+        <form method="POST" name="login-form" class="login-box" >
+          <input id="login-username" type="text" name="username" placeholder="Enter Username">
+          <input id="login-password" type="password" name="password" placeholder="Password">
+          <input id="login-submit" class="btn" type="submit" value="Login">
           <p>{{ .MESSAGE }}</p>
         </form>
       </div>
     </div>
   </div>
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="/static/css/js/getuser.js"></script>
 </html>
