update elements design

--- a/static/css/employee-list.css
+++ b/static/css/employee-list.css
@@ -190,13 +190,13 @@ td:last-child {
   background-color: #ff0101;
 }
 
-button {
+/* button {
   background-color: #04AA6D;
   color: #ffffff;
   border: none;
   padding: 10px 20px;
   font-size: 17px;
   cursor: pointer;
-}
+} */
 
 /* EMPLOYEE LIST */
