--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
+  --dark: #191716;
+  --white: #f0f0f0;
   --primary: #E40813;
   --secondary: #FF7062;
   --tertiary: #FFC5BF;
-  --primaryBG: linear-gradient(to bottom right, #000000, #414141);
-  --secondaryBG: #414141;
-  --tertiaryBG: #FFC5BF;
+  --secondaryDark: #414141;
+  --tertiaryDark: #a9a2a2;
+  --good: #34ad34;
+  --goodHover: #70e470;
+  --gradient: linear-gradient(to bottom right, #050505, #414141);
+  --shadow: 0 2px 10px #414141;
+  --big: 24px;
+  --medium: 20px;
+  --small: 16px;
+  --smallround: 5px;
+  --mediumround: 100px;
 }
 
 /* NOTE color, text, border, shadow, */
@@ -19,19 +29,11 @@
   font-family: "Roboto Flex", sans-serif;
 }
 
-.primary {
-  color: #E40813;
-}
-
-.secondary {
-  color: #FF7062;
-}
-
-.tertiary {
-  color: #ffffff
-}
-
 /* BASE  */
+
+.p2 {
+  color: var(--white);
+}
 
 .container {
   width: 100%;
@@ -44,7 +46,7 @@
   width: 13%;
   display: flex;
   flex-direction: column;
-  background-image: var(--primaryBG);
+  background-image: var(--gradient);
 }
 
 .logo {
@@ -56,7 +58,7 @@
   align-items: center;
 }
 
-.logo > img {
+.logo>img {
   width: 100%;
   padding: 1rem;
 }
@@ -99,8 +101,8 @@
   color: white;
 }
 
-.icon:hover{
-    color: #c76156;
+.icon:hover {
+  color: #c76156;
 }
 
 .aside-menu>ul>li {
@@ -119,7 +121,7 @@
   color: #FFC5BF;
 }
 
-.aside-menu>ul>li>a:hover .icon{
+.aside-menu>ul>li>a:hover .icon {
   color: #e35f50;
 }
 
@@ -134,7 +136,7 @@
   height: 10vh;
   width: 100%;
   display: flex;
-  background-color: var(--secondaryBG);
+  background-color: var(--secondaryDark);
 }
 
 .nav-user {
@@ -157,11 +159,7 @@
   padding-right: 4.5rem;
 }
 
-.nav-profile>p {
-  padding-right: 1rem;
-}
-
-.profile > img {
+.profile>img {
   width: 3.5rem;
   height: 3.5rem;
   border: 1px solid white;
@@ -204,13 +202,15 @@
   gap: 10px;
 }
 
-.mini-menu>ul>li>a, .mini-menu>ul>li:hover {
+.mini-menu>ul>li>a,
+.mini-menu>ul>li:hover {
   cursor: pointer;
   text-decoration: none;
   color: black;
 }
 
-.mini-menu>ul>li>a:hover, .mini-menu>ul>li:hover {
+.mini-menu>ul>li>a:hover,
+.mini-menu>ul>li:hover {
   color: #E40813;
 }
 
@@ -234,20 +234,20 @@
   gap: 10px;
 }
 
-.mini-menu-edit > label {
+.mini-menu-edit>label {
   position: relative;
   text-align: center;
   height: 5rem;
   width: 5rem;
 }
 
-.mini-menu-edit > label > img {
+.mini-menu-edit>label>img {
   height: 5rem;
   width: 5rem;
   border-radius: 50%;
 }
 
-.mini-menu-edit > label > span {
+.mini-menu-edit>label>span {
   font-size: 16px;
   position: absolute;
   display: none;
@@ -301,17 +301,35 @@
   justify-content: flex-end;
   width: 22.5rem;
   gap: 5px;
-  padding: 1rem;
+  padding: 1rem 2.6rem 1rem 0;
 }
 
 #save-btn {
-  background-color: #92df92;
-  padding: 3px;
+  padding: 0.1rem 0.35rem;
+  border-radius: 5px;
   cursor: pointer;
+  font-weight: 500;
+  background-color: var(--good);
+  color: var(--white);
+}
+
+#save-btn:hover {
+  background-color: var(--goodHover);
+  color: var(--secondaryDark);
 }
 
 #close-btn {
+  padding: 0.1rem;
+  border-radius: 5px;
   cursor: pointer;
+  font-weight: 500;
+  background-color: var(--white);
+  color: var(--dark);
+}
+
+#close-btn:hover {
+  background-color: var(--tertiaryDark);
+  color: var(--white);
 }
 
 .wrapper2 {
@@ -422,13 +440,13 @@
   gap: 10px;
 }
 
-.login-box > p {
+.login-box>p {
   color: white;
   font-size: 15px;
   display: block;
 }
 
-.login-box > input {
+.login-box>input {
   border-radius: 10px;
   height: 50px;
   padding: 5px;
@@ -448,3 +466,13 @@
 
 /* LOGIN */
 
+.fixer {
+  width: 100%;
+  height: 90vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 1rem;
+}
