--- a/templates/elements.html
+++ b/templates/elements.html
@@ -1,18 +1,343 @@
 {{ define "style" }}
 <style>
 
-h1,h2,h3,h4,h5,h6{
-  color: var(--primary);
-
+.elements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  height: 90vh;
+  gap: 20px;
+  overflow-y: scroll;
 }
+
+.e-wrapper1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50rem;
+}
+
+.e-wrapper2 {
+  background-image: var(--gradient);
+  width: 20rem;
+  padding: 1rem;
+}
+
+.e-wrapper3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.e-wrapper4 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.e-wrapper5 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.btn3 {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  background-color: var(--secondary);
+  color: var(--secondaryBG);
+  box-shadow: var(--shadow);
+}
+
+.btn1 {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  background-color: var(--dark);
+  color: var(--white);
+  box-shadow: var(--shadow);
+}
+
+.btn4 {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  background-color: var(--good);
+  color: var(--white);
+  box-shadow: var(--shadow);
+}
+
+.btn5 {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  background-color: var(--primary);
+  color: var(--white);
+  box-shadow: var(--shadow);
+}
+
+.btn2 {
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  font-weight: 300;
+  background-color: var(--white);
+  color: var(--dark);
+  box-shadow: var(--shadow);
+}
+
+.smallCorner {
+  border-radius: var(--smallround);
+}
+
+.mediumCorner {
+  border-radius: var(--mediumround);
+}
+
+.btn1:hover, .btn1-border:hover {
+  background-color: var(--secondaryDark);
+  color: var(--white);
+}
+
+.btn2:hover {
+  background-color: var(--secondaryDark);
+  color: var(--white);
+}
+
+.btn3:hover, .btn2-border:hover  {
+  background-color: var(--tertiary);
+}
+
+.btn4:hover, .btn3-border:hover  {
+  background-color: var(--goodHover);
+  color: var(--secondaryDark);
+}
+
+.btn5:hover, .btn4-border:hover  {
+  background-color: var(--secondary);
+}
+
+.search-bar {
+  padding: 0.5rem;
+  border-radius: 5px;
+  box-shadow: var(--shadow);
+}
+
+.inner-box {
+  display: flex;
+  gap: 10px;
+}
+
+.dropdown {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  height: 2rem;
+  font-size: 16px;
+  width: 100%;
+  background-color: var(--secondary);
+  color: var(--dark);
+  box-shadow: var(--shadow);
+}
+
+.dropdown:hover {
+  background-color: var(--tertiary);
+}
+
+.dropdown:hover .drop1 {
+  display: flex;
+}
+
+.drop1 {
+  display: none;
+  position: absolute;
+  top: 2rem;
+  left: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  height: 6rem;
+  width: 100%;
+  background-color: var(--secondary);
+}
+
+ .drop1 > p:hover {
+    background-color: var(--tertiary);
+ }
+
+ .drop1 > p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+ }
+
+#sample-select {
+  padding: 0.1em 1em;
+  box-shadow: var(--shadow);
+  background-color: var(--tertiary);
+}
+
+.filter-btn {
+  padding: 0.2rem;
+}
+
+.big {
+  font-size: 3rem;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.strike {
+  text-decoration: line-through;
+}
+
+span {
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+span:hover {
+  color: var(--primary);
+}
+
+.btn1-border {
+  padding: 0.5rem;
+  cursor: pointer;
+  border-color: var(--good);
+  font-weight: 300;
+  color: var(--dark);
+  /* box-shadow: var(--shadow); */
+}
+
+.btn2-border {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  color: var(--dark);
+  /* box-shadow: var(--shadow); */
+}
+
+.btn3-border {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  color: var(--dark);
+  /* box-shadow: var(--shadow); */
+}
+
+.btn4-border {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-weight: 300;
+  color: var(--dark);
+  /* box-shadow: var(--shadow); */
+}
+
 </style>
 {{ end }}
 {{ define "content" }}
-<h1>H1</h1>
-<h2>H2</h2>
-<h3>H3</h3>
-<h4>H4</h4>
-<h5>H5</h5>
-<h6>H6</h6>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>>
+
+<div class="elements">
+  <!-- <div class="fixer"> -->
+    <div class="e-wrapper1">
+      <h1>Title</h1>
+      <p> Lorem ipsum dolor sit <span class="underline">amet</span> consectetur adipisicing elit.
+        <span><i>Repudiandae</i></span> aliquam nulla,
+        earum delectus, incidunt quibusdam adipisci blanditiis commodi vero cum dolore?
+        Atque, voluptates sit <span><b>itaque</b></span> et blanditiis assumenda nulla pariatur!
+        Lorem <span><sub>ipsum</sub></span> dolor, sit amet consectetur adipisicing elit.
+        <span><sup>Pariatur</sup></span>, beatae error expedita nemo ad tempora. Praesentium dolores,
+        aliquam magnam repellat atque <span class="strike">ipsam</span> nulla aspernatur cupiditate, minus
+        necessitatibus sequi sint beatae.
+      </p>
+    </div>
+    
+    <div class="e-wrapper1">
+      <h1 class="big">Typography</h1>
+      <h1>The quick brown fox jumps over the lazy dog</h1>
+      <h2>The quick brown fox jumps over the lazy dog</h2>
+      <h3>The quick brown fox jumps over the lazy dog</h3>
+      <h4>The quick brown fox jumps over the lazy dog</h4>
+      <h5>The quick brown fox jumps over the lazy dog</h5>
+      <h6>The quick brown fox jumps over the lazy dog</h6>
+    </div>
+    
+    <div class="e-wrapper2">
+    
+    </div>
+    <div class="e-wrapper3">
+    
+      <button class="btn1 smallCorner">Hover Me</button>
+      <button class="btn2 smallCorner">Hover Me</button>
+      <button class="btn3 smallCorner">Hover Me</button>
+      <button class="btn4 smallCorner">Hover Me</button>
+      <button class="btn5 smallCorner">Hover Me</button>
+    
+      <button class="btn1-border smallCorner">Hover Me</button>
+      <button class="btn2 smallCorner">Hover Me</button>
+      <button class="btn2-border smallCorner">Hover Me</button>
+      <button class="btn3-border smallCorner">Hover Me</button>
+      <button class="btn4-border smallCorner">Hover Me</button>
+    
+      <button class="btn1 mediumCorner">Hover Me</button>
+      <button class="btn2 mediumCorner">Hover Me</button>
+      <button class="btn3 mediumCorner">Hover Me</button>
+      <button class="btn4 mediumCorner">Hover Me</button>
+      <button class="btn5 mediumCorner">Hover Me</button>
+    
+      <button class="btn1-border mediumCorner">Hover Me</button>
+      <button class="btn2 mediumCorner">Hover Me</button>
+      <button class="btn2-border mediumCorner">Hover Me</button>
+      <button class="btn3-border mediumCorner">Hover Me</button>
+      <button class="btn4-border mediumCorner">Hover Me</button>
+    
+      <button class="btn1">Hover Me</button>
+      <button class="btn2">Hover Me</button>
+      <button class="btn3">Hover Me</button>
+      <button class="btn4">Hover Me</button>
+      <button class="btn5">Hover Me</button>
+    
+    </div>
+    <div class="e-wrapper4">
+      <input class="search-bar" placeholder="Search">
+      <div class="inner-box">
+        <div class="dropdown">
+          <p>Hover Dropdown</p>
+          <div class="drop1">
+            <p>Option 1</p>
+            <p>Option 2</p>
+            <p>Option 3</p>
+          </div>
+        </div>
+        <div class="dropdown">
+          <p>Hover Dropdown</p>
+          <div class="drop1">
+            <p>Option 1</p>
+            <p>Option 2</p>
+            <p>Option 3</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="e-wrapper5">
+      <select name="sample-select" id="sample-select">
+        <option value="jan1">Jan 1 - 15</option>
+        <option value="jan2">Jan 15 - 16</option>
+        <option value="feb1">Feb 1 - 15</option>
+        <option value="feb2">Feb 16 - 28</option>
+      </select>
+      <button class="btn2 filter-btn">Filter</button>
+    </div>
+  <!-- </div> -->
+</div>
+
 {{ end }}
