--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
       <nav class="nav-main">
         <div class="nav-user tertiary">
           <p>Welcome, <span class="name"></span></p>
-          <p>01 January, 2024</p>
+          <p class="date"></p>
         </div>
         <div class="nav-profile">
           <div class="profile">
@@ -97,6 +97,7 @@
   {{ define "style" }}{{ end }}
 
   {{ define "script" }}{{ end }}
+  <script src="/static/css/js/getTime.js"></script>
   <script src="/static/css/js/getuser.js"></script>
   <script src="/static/css/js/script.js"></script>
   <script src="/static/css/js/emp-modal.js"></script>
