--- a/static/css/employee-list.css
+++ b/static/css/employee-list.css
@@ -141,7 +141,14 @@ td:last-child {
   resize: vertical;
   min-height: 100px;
 }
-.btn {
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+} 
+
+.btn1 {
+  float: right;
   background-color: #4CAF50;
   color: white;
   padding: 10px 20px;
@@ -149,7 +156,20 @@ td:last-child {
   border-radius: 4px;
   cursor: pointer;
 }
-.btn:hover {
+
+.btn1:hover {
+  background-color: #45a049;
+}
+
+#prevBtn, #nextBtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#prevBtn:hover, #nextBtn:hover {
   background-color: #45a049;
 }
 
@@ -160,7 +180,7 @@ td:last-child {
 }
 
 #pi, #ji, #ECI {
-  margin-bottom: 10px;
+  margin: 70px 0px 20px 0px;
 }
 
 .tab {
@@ -210,14 +230,5 @@ td:last-child {
 .gov-id input {
   width: 25rem;
 }
-
-/* button {
-  background-color: #04AA6D;
-  color: #ffffff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 17px;
-  cursor: pointer;
-} */
 
 /* EMPLOYEE LIST */
