--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -27,7 +27,7 @@
           <td><input class="select" type="checkbox" value="Edit"></td>
           <td>{{.ID}}</td>
           <td>{{.LastName}}, {{.FirstName}}</td>
-          <td>{{.Company.Name}}</td>
+          <td>{{.Company.Worksite}}</td>
           <td>{{.Department.Name}}</td>
           <td>{{.ContactNumber}}</td>
         </tr>
